# orbit-explorer

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  pyproject.toml  requirements.txt  vite.config.ts
.claude/: launch.json  settings.json
api/: index.py
orbit_explorer/: __init__.py  algebraic.py  analysis.py  api.py  cycles.py  naming.py  parse.py  preperiodic.py  sharkovsky.py
src/: App.tsx  api.ts  index.css  types.ts
src/components/: GraphCard.tsx  LegendPanel.tsx  PointInfoModal.tsx  PointLabel.tsx  PolynomialInput.tsx  SharkovskyNote.tsx  ZoomModal.tsx
src/math/: Tex.tsx
src/utils/: copyImage.ts
src/views/: CycleGraphView.tsx  RealLineView.tsx  degreeColor.ts  treeLayout.ts
tests/: test_cycles.py  test_parse.py  test_sharkovsky.py
