[project]
name = "orbit-explorer"
version = "0.1.0"
description = "Visualize the orbit/cycle structure of polynomials over Q on R."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sympy>=1.13",
    "mpmath>=1.3",
    "pydantic>=2.8",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "httpx>=0.27",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["orbit_explorer*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
